--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "echo \"No build step\"",
+    "build": "node scripts/generate-runtime-config.js",
     "start": "netlify dev"
   },
   "dependencies": {
