--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [build]
-  command = "npm run build"
-  publish = "frontend"
   functions = "netlify/functions"
+  publish = "frontend"
 
-[functions]
-  node_bundler = "zisi"
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
